1. Updated Netlify badge in README. 2. Corrected a typo. 3. Made ESLint happy 4. Upgraded dependencies 5. Switched to use Shrinkwrap for dependency closure versioning locking 6. Added Typescript as a DevDependency 7. Updated repo info in package.json

--- a/src/assets/scss/components/_button.scss
+++ b/src/assets/scss/components/_button.scss
@@ -52,6 +52,10 @@
 			width: 100%;
 		}
 
+		&.nav {
+			border-radius: _size(button-nav);
+		}
+
 		&.special {
 			background-color: _palette(fg-bold);
 			color: _palette(bg) !important;
