--- a/src/assets/scss/components/_button.scss
+++ b/src/assets/scss/components/_button.scss
@@ -57,6 +57,14 @@
 			box-shadow: inherit;
 		}
 
+		&.close {
+			box-shadow: inherit;
+
+			&:hover {
+				background-color: rgba(255,255,255,0);
+			}
+		}
+
 		&.special {
 			background-color: _palette(fg-bold);
 			color: _palette(bg) !important;
