--- a/src/assets/scss/components/_list.scss
+++ b/src/assets/scss/components/_list.scss
@@ -23,6 +23,35 @@
 
 		li {
 			padding-left: 0.5em;
+
+			&.nav {
+				@include vendor('appearance', 'none');
+				@include vendor('transition', 'background-color #{_duration(transition)} ease-in-out, color #{_duration(transition)} ease-in-out');
+				background-color: transparent;
+				border: 0;
+				color: _palette(fg-bold) !important;
+				cursor: pointer;
+				display: inline-block;
+				font-weight: _font(weight);
+				height: _size(element-height);
+				letter-spacing: _font(letter-spacing);
+				line-height: _size(element-height);
+				padding-left: 1.5rem;
+				padding-right: 1.5rem;
+				outline: 0;
+				text-align: center;
+				text-decoration: none;
+				text-transform: uppercase;
+				white-space: nowrap;
+
+				&:hover {
+					background-color: _palette(border-bg);
+				}
+
+				&:active {
+					background-color: _palette(border-bg-alt);
+				}
+			}
 		}
 
 		&.alt {
