--- a/src/assets/scss/components/_button.scss
+++ b/src/assets/scss/components/_button.scss
@@ -29,7 +29,7 @@
 		padding: 0 1.25rem 0 (1.25rem + (_font(letter-spacing) * 0.5));
 		text-align: center;
 		text-decoration: none;
-		text-transform: uppercase;
+		text-transform: none;
 		white-space: nowrap;
 
 		&:hover {
