--- a/src/assets/scss/layout/_header.scss
+++ b/src/assets/scss/layout/_header.scss
@@ -85,7 +85,7 @@
 			}
 
 			p {
-				text-transform: uppercase;
+				text-transform: none;
 				letter-spacing: _font(letter-spacing);
 				font-size: 0.8rem;
 				line-height: 2;
